# pyhtmx-gui-client

./: DEVELOPMENT.md  README.md  pyproject.toml
skill-pyhtmx-hello-world/: __init__.py  pyproject.toml
skill-pyhtmx-hello-world/gui/py-htmx/: hello_world.py
skill-pyhtmx-hello-world/src/skill_pyhtmx_hello_world/: __init__.py
skill-pyhtmx-hello-world/src/skill_pyhtmx_hello_world/gui/py-htmx/: hello_world.py  hello_world_page1.py  hello_world_page2.py  hello_world_page3.py
skill-pyhtmx-hello-world/src/skill_pyhtmx_hello_world/locale/en-us/intent/: pyhtmx.intent
src/: app.py  config.py  config.toml  event_sender.py  gui_management.py  home_screen.py  home_screen[carousel].py  home_screen_carousel.py  home_screen_new.py  home_screen_vanilla.py  index.html  kit.py  local_home_screen.py  logger.py  master.py  ovos_gui_client.py  renderer.py
src/assets/css/: styles.css
src/assets/js/: carousel.js  htmx-process.js
src/pyhtmx_gui/: app.py  config.py  gui_client.py  gui_management.py  gui_manager.py  home_screen.py  home_screen_carousel.py  home_screen_new.py  kit.py  logger.py  master.py  not_implemented_page.py  ovos_gui_client.py  page_group.py  page_manager.py  renderer.py  status_bar.py  status_handler.py  types.py  utils.py
src/pyhtmx_gui/assets/animations/: eye.json  spinner.json  spinner2.json
src/pyhtmx_gui/assets/css/: carousel.css  main.css  status.css  styles.css
src/pyhtmx_gui/assets/js/: carousel.js  htmx-process.js  main.js  sse.js
src/pyhtmx_gui/config/: config.toml
src/pyhtmx_gui/tools/: display.py  dummy_document.py  utils.py
tools/: dummy_document.py
